Change Time View Design
I changed the design of TimeView using PaintCode. I updated the style
kit and customized DayScheduleView and TimeView for the new corrected
height of the scrollable time view.

--- a/DayScheduleView/DayScheduleView.xcodeproj/xcshareddata/xcschemes/DayScheduleView-iOS-Static.xcscheme
+++ b/DayScheduleView/DayScheduleView.xcodeproj/xcshareddata/xcschemes/DayScheduleView-iOS-Static.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EF73BCEB2118004C001BEBE1"
-               BuildableName = "iOS-Static.framework"
+               BuildableName = "DayScheduleView.framework"
                BlueprintName = "iOS-Static"
                ReferencedContainer = "container:DayScheduleView.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EF73BCEB2118004C001BEBE1"
-            BuildableName = "iOS-Static.framework"
+            BuildableName = "DayScheduleView.framework"
             BlueprintName = "iOS-Static"
             ReferencedContainer = "container:DayScheduleView.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EF73BCEB2118004C001BEBE1"
-            BuildableName = "iOS-Static.framework"
+            BuildableName = "DayScheduleView.framework"
             BlueprintName = "iOS-Static"
             ReferencedContainer = "container:DayScheduleView.xcodeproj">
          </BuildableReference>
